force-app/main/default/objects/Media_Partner__c/Media_Partner__c.object-meta.xml
<CustomObject>
    <description>Object to track our Media Partner information.</description>
    <label>Media Partner</label>
    <nameField>
        <label>Media Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>