force-app/main/default/objects/Media_Partner__c/fields/Additional_Publication_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Contact__c</fullName>
    <inlineHelpText>Additional person to contact</inlineHelpText>
    <label>Additional Publication Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>