force-app/main/default/objects/Media_Partner__c/fields/Additional_Publication_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Contact_Email__c</fullName>
    <label>Additional Publication Contact Email</label>
    <type>Email</type>
</CustomField>