force-app/main/default/objects/Media_Partner__c/fields/Additional_Publication_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Contact_Phone__c</fullName>
    <label>Additional Publication Contact Phone</label>
    <type>Phone</type>
</CustomField>