force-app/main/default/objects/Media_Partner__c/fields/Additional_Publication_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Contact_Title__c</fullName>
    <label>Additional Publication Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>