force-app/main/default/objects/Media_Partner__c/fields/Circulation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Circulation_Contact__c</fullName>
    <description>Name of who we contact for copies of the publication</description>
    <inlineHelpText>Name of who we contact for copies of the publication</inlineHelpText>
    <label>Circulation Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>