force-app/main/default/objects/Media_Partner__c/fields/Circulation_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Circulation_Contact_Email__c</fullName>
    <label>Circulation Contact Email</label>
    <type>Email</type>
</CustomField>