force-app/main/default/objects/Media_Partner__c/fields/Circulation_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Circulation_Contact_Phone__c</fullName>
    <label>Circulation Contact Phone</label>
    <type>Phone</type>
</CustomField>