force-app/main/default/objects/Media_Partner__c/fields/Circulation_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Circulation_Contact_Title__c</fullName>
    <label>Circulation Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>