force-app/main/default/objects/Media_Partner__c/fields/Digital_Specs__c.field-meta.xml
<CustomField>
    <fullName>Digital_Specs__c</fullName>
    <inlineHelpText>Size, pixels, url needs, etc.</inlineHelpText>
    <label>Digital Specs</label>
    <type>TextArea</type>
</CustomField>