force-app/main/default/objects/Media_Partner__c/fields/Digital_Upload_URL__c.field-meta.xml
<CustomField>
    <fullName>Digital_Upload_URL__c</fullName>
    <label>Digital Upload URL</label>
    <type>Url</type>
</CustomField>