force-app/main/default/objects/Media_Partner__c/fields/Materials_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Materials_Due_Date__c</fullName>
    <description>Materials Due from Media Kit</description>
    <inlineHelpText>Materials Due Date in Media Kit</inlineHelpText>
    <label>Materials Due Date</label>
    <type>Date</type>
</CustomField>