force-app/main/default/objects/Media_Partner__c/fields/Media_Kit__c.field-meta.xml
<CustomField>
    <fullName>Media_Kit__c</fullName>
    <label>Media Kit</label>
    <type>Url</type>
</CustomField>