force-app/main/default/objects/Media_Partner__c/fields/Media_Partner_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Media_Partner_Street_Address__c</fullName>
    <inlineHelpText>Street Address</inlineHelpText>
    <label>Media Partner Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>