force-app/main/default/objects/Media_Partner__c/fields/Media_Partner_Website__c.field-meta.xml
<CustomField>
    <fullName>Media_Partner_Website__c</fullName>
    <label>Media Partner Website</label>
    <type>Url</type>
</CustomField>