force-app/main/default/objects/Media_Partner__c/fields/Primary_Media_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Media_Contact__c</fullName>
    <description>Primary media contact name</description>
    <inlineHelpText>Primary media contact name</inlineHelpText>
    <label>Primary Media Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>