force-app/main/default/objects/Media_Partner__c/fields/Primary_Media_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Media_Contact_Email__c</fullName>
    <description>Primary Media Contact Email</description>
    <inlineHelpText>Primary Media Contact Email</inlineHelpText>
    <label>Primary Media Contact Email</label>
    <type>Email</type>
</CustomField>