force-app/main/default/objects/Media_Partner__c/fields/Primary_Media_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Media_Contact_Phone__c</fullName>
    <description>Primary Media Contact Phone</description>
    <inlineHelpText>Primary Media Contact Phone</inlineHelpText>
    <label>Primary Media Contact Phone</label>
    <type>Phone</type>
</CustomField>