force-app/main/default/objects/Media_Partner__c/fields/Primary_Media_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Media_Contact_Title__c</fullName>
    <description>Primary Media Contact Title</description>
    <inlineHelpText>Primary Media Contact Title (Ex. publisher, sales executive, editor in chief, creative director, advertising executive)</inlineHelpText>
    <label>Primary Media Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>