force-app/main/default/objects/Media_Partner__c/fields/Print_Specs__c.field-meta.xml
<CustomField>
    <fullName>Print_Specs__c</fullName>
    <inlineHelpText>Size, bleed, live area, trim, etc.</inlineHelpText>
    <label>Print Specs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>