force-app/main/default/objects/Media_Partner__c/fields/Publication_Name__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name__c</fullName>
    <description>Publication name</description>
    <inlineHelpText>Publication name (no formatting)</inlineHelpText>
    <label>Publication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>