force-app/main/default/objects/Media_Partner__c/fields/Publication_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name_Format__c</fullName>
    <description>Publication name with formatting (italics, bold, capitalization, etc.)</description>
    <inlineHelpText>Publication name with formatting (italics, bold, capitalization, etc.)</inlineHelpText>
    <label>Publication Name Format</label>
    <length>500</length>
    <type>Html</type>
</CustomField>