force-app/main/default/objects/Media_Partner__c/fields/Publication_Type__c.field-meta.xml
<CustomField>
    <fullName>Publication_Type__c</fullName>
    <description>Publication type</description>
    <inlineHelpText>What type of publication?</inlineHelpText>
    <label>Publication Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>