force-app/main/default/objects/Media_Partner__c/fields/Secondary_Media_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Media_Contact__c</fullName>
    <description>Secondary media contact name</description>
    <inlineHelpText>Secondary media contact name</inlineHelpText>
    <label>Secondary Media Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>