force-app/main/default/objects/Media_Partner__c/fields/Secondary_Media_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Media_Contact_Email__c</fullName>
    <description>Secondary Media Contact Email</description>
    <inlineHelpText>Secondary Media Contact Email</inlineHelpText>
    <label>Secondary Media Contact Email</label>
    <type>Email</type>
</CustomField>