force-app/main/default/objects/Media_Partner__c/fields/Secondary_Media_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Media_Contact_Phone__c</fullName>
    <description>Secondary Media Contact Phone</description>
    <label>Secondary Media Contact Phone</label>
    <type>Phone</type>
</CustomField>