force-app/main/default/objects/Media_Partner__c/fields/Secondary_Media_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Media_Contact_Title__c</fullName>
    <description>Secondary Media Contact Title</description>
    <inlineHelpText>Secondary Media Contact Title (Ex. Vice President, Editor in Chief, Publisher, Advertising Director, etc.)</inlineHelpText>
    <label>Secondary Media Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>