force-app/main/default/objects/Media_Partner__c/fields/Upload_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Upload_Instructions__c</fullName>
    <inlineHelpText>Ex. FTP, dropbox, passwords, other upload isntructions</inlineHelpText>
    <label>Upload Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>