force-app/main/default/objects/Media_Partner__c/fields/Upload_URL__c.field-meta.xml
<CustomField>
    <fullName>Upload_URL__c</fullName>
    <label>Upload URL</label>
    <type>Url</type>
</CustomField>