force-app/main/default/objects/Media_Partner__c/fields/Years_with_media_partner__c.field-meta.xml
<CustomField>
    <fullName>Years_with_media_partner__c</fullName>
    <description>Years with media partner</description>
    <inlineHelpText>How long have we partnered with this publication/media partner</inlineHelpText>
    <label>Years with media partner</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>