force-app/main/default/objects/Media_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>General_Notes__c</columns>
    <columns>Publication_Type__c</columns>
    <columns>Publication_Name__c</columns>
    <columns>Upload_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>colorado</label>
</ListView>